--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Roles/Create.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Roles/Create.cshtml
@@ -17,7 +17,7 @@
                 <span asp-validation-for="Adi" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Ekle" class="btn btn-primary" />
             </div>
         </form>
     </div>
