--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -38,16 +38,18 @@
 			<nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
 				<div class="sb-sidenav-menu">
 					<div class="nav">
-						<div class="sb-sidenav-menu-heading">Core</div>
+						<div class="sb-sidenav-menu-heading">Menü</div>
 						<a class="nav-link" href="/Admin/">
 							<div class="sb-nav-link-icon"><i class="fa-solid fa-house"></i></div>
 							Ana Sayfa
 						</a>
-						<div class="sb-sidenav-menu-heading">Menü</div>
-
+						<a class="nav-link" href="/Admin/Sliders">
+							<div class="sb-nav-link-icon"><i class="fa-solid fa-sliders"></i></div>
+							Slider Yönetimi
+						</a>
 						<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
 							<div class="sb-nav-link-icon"><i class="fa-solid fa-network-wired"></i></div>
-							Rol Yönetim
+							Rol Yönetimi
 							<div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
 						</a>
 						<div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
@@ -107,11 +109,7 @@
 	</div>
 	</div>
 
-	<footer class="border-top footer text-muted">
-		<div class="container">
-			&copy; 2023 - OtoServisSatis.WebUI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-		</div>
-	</footer>
+	
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
