--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Cars/Index.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Cars/Index.cshtml
@@ -31,6 +31,9 @@
                 @Html.DisplayNameFor(model => model.SatistaMi)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Anasayfa)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Resim1)
             </th>
             <th>
@@ -40,7 +43,7 @@
                 @Html.DisplayNameFor(model => model.Resim3)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Marka)
+                @Html.DisplayNameFor(model => model.Marka.Adi)
             </th>
             <th></th>
         </tr>
@@ -66,6 +69,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.SatistaMi)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Anasayfa)
                 </td>
                 <td>
                     <img src="/Img/Cars/@item.Resim1" alt="" height="34" />
