--- a/OtoServisSatis.WebUI/Views/Shared/_Layout.cshtml
+++ b/OtoServisSatis.WebUI/Views/Shared/_Layout.cshtml
@@ -34,8 +34,16 @@
                     <input name="q" type="search" class="form-control form-control-dark text-bg-dark" placeholder="Ara..." aria-label="Search">
                 </form>
                 <div class="text-end">
-                    <a href="Login" class="btn btn-primary-light me-2">Giriş</a>
-                    <a type="SignUp" class="btn btn-primary">Kayıt Ol</a>
+                    @if (Context.User.Identity.IsAuthenticated)
+                    {
+                        <a asp-controller="Account" asp-action="Index" class="btn btn-primary">Hesabım</a>
+                        <a asp-controller="Account" asp-action="Logout" class="btn btn-danger">Oturumu Kapat</a>
+                    }
+                    else
+                    {
+                        <a asp-controller="Account" asp-action="Login" class="btn btn-primary">Giriş Yap</a>
+                        <a asp-controller="Account" asp-action="Register" class="btn btn-primary">Kayıt Ol</a>
+                    }                   
                 </div>
             </div>
         </nav>
